kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lara9k
spec:
  selector:
    matchLabels:
      run: lara9k
  template:
    metadata:
      labels:
        run: lara9k
    spec:
      containers:
        - name: laravel9
          image: cristirond/lara9k
          ports:
            - containerPort: 80
